--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "@ngneat/falso": "^6.4.0",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/primitive": "^1.1.0",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-compose-refs": "^1.1.0",
     "@radix-ui/react-context": "^1.1.0",
@@ -118,7 +119,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-toggle-group": "^1.0.3",
     "@radix-ui/react-use-controllable-state": "^1.1.0",
-    "@radix-ui/themes": "^3.1.1",
+    "@radix-ui/themes": "^3.1.3",
     "@rails/actioncable": "^7.0.6",
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.3.0",
