--- a/config/roles.yml
+++ b/config/roles.yml
@@ -14,6 +14,7 @@ roles:
         - tutor
       session:
         - muso
+        - support
     social_event:
       activity:
         - organiser
