--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "license": "MIT",
   "type": "module",
   "packageManager": "pnpm@8.15.9",
+  "engines": {
+    "node": "22.16.0"
+  },
   "scripts": {
     "codegen": "graphql-codegen --config codegen.ts",
     "contentful": "graphql-codegen --config contentful.ts",
