--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "stylelint-config-standard": "34.0.0",
     "stylelint-order": "^6.0.4",
     "stylelint-use-nesting": "^4.1.0",
+    "svelte": "^4.2.19",
     "typescript": "^5.5.3",
     "typescript-plugin-css-modules": "^5.1.0",
     "unplugin-fonts": "^1.1.1",
