--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "unplugin-fonts": "^1.1.1",
     "vite": "^5.4.19",
     "vite-plugin-ruby": "^5.0.0",
-    "vitest": "^1.6.1"
+    "vitest": "^1.6.1",
+    "ws": "^8.18.2"
   },
   "dependencies": {
     "@apollo/client": "^3.10.8",
