tweaks for 2025 launch

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,7 +7,7 @@
   "plugins": ["stylelint-use-nesting"],
   "rules": {
     "at-rule-no-unknown": null,
-    "block-no-empty": true,
+    "block-no-empty": null,
     "csstools/use-nesting": "always",
     "custom-property-pattern": null,
     "no-descending-specificity": null,
@@ -21,6 +21,7 @@
     "hue-degree-notation": null,
     "media-feature-range-notation": null,
     "custom-property-empty-line-before": null,
+    "declaration-block-no-redundant-longhand-properties": null,
     "order/order": [
       [
         "dollar-variables",
