--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {
     "@0no-co/graphqlsp": "^1.4.1",
     "@babel/core": "^7.0.0-0",
-    "@biomejs/biome": "1.8.0",
+    "@biomejs/biome": "^2.0.6",
     "@cicadahq/cicada": "^0.1.50",
     "@contentful/rich-text-types": "^16.0.3",
     "@csstools/postcss-global-data": "^2.1.1",
