--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "graphql": "^16.6.0",
     "graphql-ruby-client": "^1.11.8",
     "hashids": "^2.3.0",
+    "html-to-image": "^1.11.13",
     "initials": "^3.1.2",
     "lexical": "^0.16.0",
     "lodash-es": "^4.17.21",
